fixing up inline form items spacing

--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -231,7 +231,7 @@ input[type="search"] {
 .checkbox--inline {
   position: relative;
   display: inline-block;
-  padding-left: 1.25rem;
+  //padding-left: 1.25rem;
   margin-bottom: 0;
   font-weight: normal;
   vertical-align: middle;
